Animations fix (y-scrolling on mobile), footer adaptation

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,12 @@ h6 {
     font-size: 25px;
   }
 }
+@media (max-width: 430px) {
+  .input {
+    font-size: 16px;
+    height: 40px;
+  }
+}
 .header {
   padding: 150px 0;
   background-color: rgba(235, 229, 224, 0.521);
@@ -1143,6 +1149,17 @@ h6 {
   .form__img {
     width: 250px;
     display: none;
+  }
+}
+@media (max-width: 430px) {
+  .form__form {
+    padding: 30px;
+  }
+  .form__btn {
+    padding: 15px 50px;
+  }
+  .input__item_title {
+    font-size: 16px;
   }
 }
 .footer {
