--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -73,3 +73,9 @@
 	.section
 		&-title
 			font-size: 25px
+
+
+@media (max-width: 430px)
+	.input
+		font-size: 16px
+		height: 40px
