--- a/sass/blocks/_form.sass
+++ b/sass/blocks/_form.sass
@@ -82,3 +82,14 @@
 		&__img
 			width: 250px
 			display: none
+
+@media (max-width: 430px)
+	.form
+		&__form
+			padding: 30px
+		&__btn
+			padding: 15px 50px
+	.input
+		&__item
+			&_title
+				font-size: 16px
